--- a/Section_4/FormsExercise.html
+++ b/Section_4/FormsExercise.html
@@ -10,111 +10,117 @@
 <body>
     <h1><strong>Register</strong></h1>
     <form action="">
-        <label for="First Name">First Name:</label>
-        <input type="text" name="First Name" id="First Name" placeholder="John"
-               required>
+        <div>
+            <label for="First_Name">First Name:</label>
+            <input type="text" name="First Name" id="First_Name"
+                   placeholder="John" required>
 
-        <label for="Last Name">Last Name:</label>
-        <input type="text" name="Last Name" id="Last Name" placeholder="Doe"
-               required>
+            <label for="Last_Name">Last Name:</label>
+            <input type="text" name="Last_Name" id="Last Name"
+                   placeholder="Smith" required>
+        </div>
 
-        <br>
+        <div>
+            <label for="Male">Male</label>
+            <input type="radio" name="gender" id="Male" value="Male">
 
-        <label for="Male">Male</label>
-        <input type="radio" name="sex" id="Male" value="Male">
+            <label for="Female">Female</label>
+            <input type="radio" name="gender" id="Female" value="Female">
 
-        <label for="Female">Female</label>
-        <input type="radio" name="sex" id="Female" value="Female">
+            <label for="Other">Other</label>
+            <input type="radio" name="gender" id="Other" value="Other">
+        </div>
 
-        <label for="Other">Other</label>
-        <input type="radio" name="sex" id="Other" value="Other">
+        <div>
+            <label for="Email">Email:</label>
+            <input type="email" name="Email" id="Email" placeholder="your email"
+                   required>
 
-        <br>
+            <label for="Password">Password:</label>
+            <input type="password" name="Password" id="Password"
+                   placeholder="your email" pattern="{5,10}" required
+                   title="Password must be between 5 and 10 characters."
+                   required>
+        </div>
 
-        <label for="Email">Email:</label>
-        <input type="email" name="Email" id="Email" placeholder="your email"
-               required>
+        <div>
+            <label for="age-select">Birthday:</label>
+            <select name="Month" id="age-select">
+                <option value="">Month</option>
+                <option value="Jan">Jan</option>
+                <option value="Feb">Feb</option>
+                <option value="Mar">Mar</option>
+                <option value="Apr">Apr</option>
+                <option value="May">May</option>
+                <option value="Jun">Jun</option>
+                <option value="Jul">Jul</option>
+                <option value="Aug">Aug</option>
+                <option value="Sep">Sep</option>
+                <option value="Oct">Oct</option>
+                <option value="Nov">Nov</option>
+                <option value="Dec">Dec</option>
+            </select>
 
-        <label for="Password">Password:</label>
-        <input type="password" name="Password" id="Password"
-               placeholder="your email" minlength="5" maxlength="10" required>
+            <select name="Day" id="age-select">
+                <option value="">Day</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+                <option value="13">13</option>
+                <option value="14">14</option>
+                <option value="15">15</option>
+                <option value="16">16</option>
+                <option value="17">17</option>
+                <option value="18">18</option>
+                <option value="19">19</option>
+                <option value="20">20</option>
+                <option value="21">21</option>
+                <option value="22">22</option>
+                <option value="23">23</option>
+                <option value="24">24</option>
+                <option value="25">25</option>
+                <option value="26">26</option>
+                <option value="27">27</option>
+                <option value="28">28</option>
+                <option value="29">29</option>
+                <option value="30">30</option>
+                <option value="31">31</option>
+            </select>
 
-        <br>
+            <select name="Year" id="age-selection">
+                <option value="">Year</option>
+                <option value="2002">2002</option>
+                <option value="2001">2001</option>
+                <option value="2000">2000</option>
+                <option value="1999">1999</option>
+                <option value="1998">1998</option>
+                <option value="1997">1997</option>
+                <option value="1996">1996</option>
+                <option value="1995">1995</option>
+                <option value="1994">1994</option>
+                <option value="1993">1993</option>
+            </select>
+        </div>
 
-        <label for="age-select">Birthday:</label>
-        <select name="Month" id="age-select">
-            <option value="">Month</option>
-            <option value="Jan">Jan</option>
-            <option value="Feb">Feb</option>
-            <option value="Mar">Mar</option>
-            <option value="Apr">Apr</option>
-            <option value="May">May</option>
-            <option value="Jun">Jun</option>
-            <option value="Jul">Jul</option>
-            <option value="Aug">Aug</option>
-            <option value="Sep">Sep</option>
-            <option value="Oct">Oct</option>
-            <option value="Nov">Nov</option>
-            <option value="Dec">Dec</option>
-        </select>
+        <div>
+            <label for="terms_cond_box">I agree to the terms and
+                conditions</label>
+            <input type="checkbox" name="" id="terms_cond_box" required>
+        </div>
 
-        <select name="Day" id="age-select">
-            <option value="">Day</option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-            <option value="11">11</option>
-            <option value="12">12</option>
-            <option value="13">13</option>
-            <option value="14">14</option>
-            <option value="15">15</option>
-            <option value="16">16</option>
-            <option value="17">17</option>
-            <option value="18">18</option>
-            <option value="19">19</option>
-            <option value="20">20</option>
-            <option value="21">21</option>
-            <option value="22">22</option>
-            <option value="23">23</option>
-            <option value="24">24</option>
-            <option value="25">25</option>
-            <option value="26">26</option>
-            <option value="27">27</option>
-            <option value="28">28</option>
-            <option value="29">29</option>
-            <option value="30">30</option>
-            <option value="31">31</option>
-        </select>
+        <div>
+            <button>Submit</button>
+        </div>
 
-        <select name="Year" id="age-selection">
-            <option value="">Year</option>
-            <option value="2002">2002</option>
-            <option value="2001">2001</option>
-            <option value="2000">2000</option>
-            <option value="1999">1999</option>
-            <option value="1998">1998</option>
-            <option value="1997">1997</option>
-            <option value="1996">1996</option>
-            <option value="1995">1995</option>
-            <option value="1994">1994</option>
-            <option value="1993">1993</option>
-        </select>
-
-        <br>
-
-        <label for="terms_cond_box">I agree to the terms and conditions</label>
-        <input type="checkbox" name="" id="terms_cond_box" required>
-
-        <br>
-
-        <button>Submit</button>
 
     </form>
 </body>
