Optimized code in Tic Tac Toe exercise

--- a/Section_6/Tic_Tac_Toe_Exercise/TicTacToeExercise.html
+++ b/Section_6/Tic_Tac_Toe_Exercise/TicTacToeExercise.html
@@ -12,17 +12,17 @@
 		<table>
 			<tr>
 				<td></td>
-				<td id="vertical-borders"></td>
+				<td class="vertical-borders"></td>
 				<td></td>
 			</tr>
 			<tr>
-				<td id="horizontal-borders"></td>
-				<td id="all-borders"></td>
-				<td id="horizontal-borders"></td>
+				<td class="horizontal-borders"></td>
+				<td class="vertical-borders horizontal-borders"></td>
+				<td class="horizontal-borders"></td>
 			</tr>
 			<tr>
 				<td></td>
-				<td id="vertical-borders"></td>
+				<td class="vertical-borders"></td>
 				<td></td>
 			</tr>
 		</table>
